--- a/nginx/deployment.yaml
+++ b/nginx/deployment.yaml
@@ -4,6 +4,7 @@ metadata:
   name: my-nginx
   labels:
     app: nginx-test
+
 spec:
   replicas: 2
   selector:
@@ -16,6 +17,6 @@ spec:
     spec:
       containers:
       - name: nginx
-        image: nginx:1.14.2
+        image: nginx
         ports:
         - containerPort: 80
