update GitHub token secret configuration in deployment

--- a/self-hosted-runner/gr-deployment.yaml
+++ b/self-hosted-runner/gr-deployment.yaml
@@ -29,8 +29,8 @@ spec:
         - name: GITHUB_PAT
           valueFrom:
             secretKeyRef:
-              name: gh-pat
-              key: pat
+              name: github-token
+              key: TOKEN
         lifecycle:
           postStart:
             exec:
