--- a/self-hosted-runner/secret.yaml
+++ b/self-hosted-runner/secret.yaml
@@ -2,7 +2,12 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: github-token
-  namespace: github-runner
+  namespace: 
 type: Opaque
-data:
+
+
+data: 
+  # The value of the secret is base64 encoded
+  # echo -n "ghp_your_generated_token" | base64
+
   TOKEN: Z2hwX1V2MjFkVzV6QlhmNnZ3WFpuRU0wODJvWWk1bXZHdjNDZ0RDSA==
