--- a/self-hosted-runner/secret.yaml
+++ b/self-hosted-runner/secret.yaml
@@ -2,12 +2,12 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: github-token
-  namespace: 
+  namespace: github-runner
 type: Opaque
 
 
 data: 
   # The value of the secret is base64 encoded
-  # echo -n "ghp_your_generated_token" | base64
-
-  TOKEN: Z2hwX1V2MjFkVzV6QlhmNnZ3WFpuRU0wODJvWWk1bXZHdjNDZ0RDSA==
+ 
+  # not recommended to use personal access token in pubic repositories 
+  TOKEN: Z2hwXzI2SUE3V0tjTWlTVXpNOXZ0dzJ0QnhTeXY0V3BoMTF2SHZqNQ==    # echo -n "ghp_your_generated_token" | base64
